--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "framer-motion": "^4.1.17",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
