--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "framer-motion": "^4.1.17",
+    "lodash.throttle": "^4.1.1",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
