--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
     "lodash.throttle": "^4.1.1",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "remark-images": "^2.0.0",
     "sass": "^1.32.12"
   },
   "devDependencies": {
