--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "lodash.throttle": "^4.1.1",
+    "mongodb": "^3.5.9",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,10 +24,13 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "remark-images": "^2.0.0",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@types/react": "^17.0.5",
+    "jest": "^27.3.1",
     "typescript": "^4.2.4"
   }
 }
