--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@shelf/jest-mongodb": "^2.1.0",
     "@types/react": "^17.0.5",
     "jest": "^27.3.1",
+    "node-mocks-http": "^1.11.0",
     "typescript": "^4.2.4"
   }
 }
