--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "next lint"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
@@ -16,7 +17,7 @@
     "gray-matter": "^4.0.3",
     "lodash.throttle": "^4.1.1",
     "mongodb": "^3.5.9",
-    "next": "10.2.0",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -31,6 +32,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@shelf/jest-mongodb": "^2.1.0",
     "@types/react": "^17.0.5",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "jest": "^27.3.1",
     "node-mocks-http": "^1.11.0",
     "typescript": "^4.2.4"
