--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.23.0",
     "cors": "^2.8.5",
     "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "mongodb": "^3.5.9",
     "next": "^11.1.2",
