--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "lodash.throttle": "^4.1.1",
     "mongodb": "^3.5.9",
     "next": "^11.1.2",
+    "random-word-slugs": "^0.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
+    "react-textarea-autosize": "^8.3.3",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "remark-images": "^2.0.0",
