--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "mongodb": "^3.5.9",
-    "next": "^11.1.2",
+    "next": "12",
     "random-word-slugs": "^0.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -29,7 +29,8 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "remark-images": "^2.0.0",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.15.4",
