--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "lib/posts.js"  ],
+    "**/*.tsx",
+    "lib/posts.js"
+  ],
   "exclude": [
     "node_modules"
   ]
